--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,46 +6,36 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorAccent"
+    android:focusableInTouchMode="true"
     tools:context="edu.temple.tuf21842.webbrowser.MainActivity">
 
     <Toolbar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tools">
-        <EditText
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/URLbar"/>
+            android:text="P"
+            android:id="@+id/prev_page"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="N"
+            android:id="@+id/next_page"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New"
+            android:id="@+id/new_page"/>
+
     </Toolbar>
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/web_page_fragment"
-        tools:context="edu.temple.tuf21842.webbrowser.WebPage">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/go"/>
-            </LinearLayout>
-            <WebView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/browser">
-            </WebView>
-        </LinearLayout>
+        android:id="@+id/web_frame"
+        tools:context="edu.temple.tuf21842.webbrowser.MainActivity">
+
     </FrameLayout>
-
-
 </LinearLayout>
