--- a/app/src/main/res/layout/fragment_web_page.xml
+++ b/app/src/main/res/layout/fragment_web_page.xml
@@ -12,6 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/URL_bar"
+            android:inputType="textWebEditText"
             android:layout_toStartOf="@+id/go_button" />
         <Button
             android:layout_width="wrap_content"
